styles/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');

html,body{
    margin: 0;
}
body{
    margin: 0px 60px;
    background: hsl(257, 40%, 49%) url("../images/bg-desktop.svg") no-repeat;
   /* Allowing the background not being crop whatever the screen ratio */
    background-size: cover; 
}
/* Layout */
.container{
    display: grid;
    align-content: center;
    width: 100%;
    height: 100vh;
    grid-template-columns: 1.2fr 1fr;
    grid-template-rows: 0.5fr 3fr 0.5fr;
    grid-template-areas:
    "head head"
    "aside main"
    "footer footer";
}

header{
    grid-area: head;
    display: flex;
    align-items: flex-end;
}
main{
    grid-area: main;
    height: 100%;
    margin:auto;
    display: flex;
    color: white;
}
aside{
    grid-area: aside;
    display: flex;
    align-items: center;
}
footer{
    grid-area: footer;
    display: flex;
    justify-content: flex-end;
    align-items: center;
}
/* Dimension for SVG
    Header --> logo
    Aside --> Mockup
    Footer --> SN icons
*/
.mockup{
    width: 100%;
    height: auto;
}
.logo{
    height: 60%;
    width: auto;
}
footer svg{
    width: 24px;
    height: 24px;
    fill: white;
}
/* Typo */
h1, p{
    max-width: 80%;
    margin: auto;
}
h1{
    font-family: 'Poppins', sans-serif;
    font-weight: 600;
    font-size: 2rem;
}
p{
    font-family: 'Open Sans', sans-serif;
    font-weight: 400;
    font-size: 1rem;
}
.txtalignV{
    margin: auto;
}
/* Spacing mgt */
aside img, main{
    margin-top: 20px;
}
main p{
    margin-bottom: 40px;
}
footer a{
    margin-left: 20px;
}

/* CTA button design*/
main a{
    text-decoration: none;
    background-color: white;
    color: hsl(257, 40%, 49%);
    padding: 10px 40px;
    border-radius: 25px 25px;
    box-shadow: 5px 3px 5px 0px hsla(0, 0%, 9%, 0.3), 
    -1px 3px 0px 0px hsla(0, 0%, 0%, 0.1);
}

/* Hover changing SVG & button color */
footer svg:hover{
    fill: hsl(300, 69%, 71%);
}
main a:hover{
    color: white;
    background: hsl(300, 69%, 71%);
}

/* RESPONSIVE PART */
@media screen and (max-width:800px) {
    body{
        margin: 0px 20px 0px 20px;
        background: hsl(257, 40%, 49%) url("../images/bg-mobile.svg") no-repeat;
        background-size:cover;
    }
    .container{
        width: auto;
        align-content: flex-start;
        grid-template-columns: 1fr;
        grid-template-rows: .5fr 2fr 2fr 1fr;
        grid-template-areas: 
        "head"
        "aside"
        "main"
        "footer";
   }
   
   /* Dispoition of items to be centered */
   aside,footer{
       justify-self: center;
   }
    main{
        margin: 0px;
        margin: 0px;
        padding-left:10px;
        padding-right: 10px;
        text-align: center;
    }
    .txtalignV{
        margin-top: 20px;
    }
    main a{
        padding: 10px 80px;
    }
    footer a{
        margin-top: 70px;
        margin-bottom: 40px;
   }
}

